public interface Factor {
    Polynomial calFactor();
}
